--- a/index.html
+++ b/index.html
@@ -68,6 +68,12 @@
       </div>
       <div>
         <p>個人事業所ならではの私たちの特徴をご紹介いたします。</p>
+        <p>個人事業所ならではの私たちの特徴をご紹介いたします。</p>
+        <p>個人事業所ならではの私たちの特徴をご紹介いたします。</p>
+        <p>個人事業所ならではの私たちの特徴をご紹介いたします。</p>
+        <p>個人事業所ならではの私たちの特徴をご紹介いたします。</p>
+        <p>個人事業所ならではの私たちの特徴をご紹介いたします。</p>
+        <p>個人事業所ならではの私たちの特徴をご紹介いたします。</p>
       </div>
     </div>
     <!-- <div class="feature-container block-layout"> -->
