--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
     <!-- <div class="service-container block-layout"> -->
     <div class="service-container">
       <div class="service-block">
-        <a href="#">
+        <a href="service/homepage/index.html">
           <div class="s-icon">
             <img src="IMG/service1.png" alt="ホームページアイコン">
           </div>
@@ -140,12 +140,12 @@
       <div class="service-block">
         <a href="#">
           <div class="s-icon">
-            <img src="IMG/service2.png" alt="LPページアイコン">
+            <img src="IMG/service2.png" alt="ランディングページアイコン">
           </div>
           <div class="s-desc">
-            <p>LPページ制作</p>
+            <p>ランディングページ制作</p>
             <p>1枚の縦に長いWEBページのことを指します。ユーザー心理に沿った構成により、商品やサービスの訴求から成約までの導線設計を行います。</p>
-            <span>LPページ制作についてみる　＞</span>
+            <span>ランディングページ制作についてみる　＞</span>
           </div>
         </a>
       </div>
