--- a/office/index.html
+++ b/office/index.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" href="../CSS/office.css">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Make Web</title>
+  <title>Make Web - 事業所概要</title>
   <meta name="description" content="">
   <link rel="icon" href="../IMG/favicon.jpg">
 </head>
@@ -78,21 +78,21 @@
     <h2 class="bl-b">制作に関するポリシー</h2>
     <div class="policy-container">
       <div class="policy-wrap">
-        <div><img src="../IMG/policy1.png" alt="わかりやすいをモットーに。"></div>
+        <div><img src="../IMG/office/policy1.png" alt="わかりやすいをモットーに。"></div>
         <div class="policy-text">
           <h3>わかりやすいをモットーに。</h3>
           <p>私自身、元々PCが得意な方ではなかったです。<br>その為、ご依頼をいただいた際に少しでも不安を感じた方には、ご不明な点は誠意を持ってご説明いたします。</p>
         </div>
       </div>
       <div class="policy-wrap">
-        <div><img src="../IMG/policy2.png" alt="サイト規模に適したご提案をいたします。"></div>
+        <div><img src="../IMG/office/policy2.png" alt="サイト規模に適したご提案をいたします。"></div>
         <div class="policy-text">
           <h3>サイト規模に適したご提案をいたします。</h3>
           <p>大規模サイトや、ECサイトは他社の同業者をおすすめする場合があります。<br>最高のパフォーマンスで制作するために、目的に合った最適なご提案をします。</p>
         </div>
       </div>
       <div class="policy-wrap">
-        <div><img src="../IMG/policy3.png" alt="事業の課題に向き合うパートナーとなります。"></div>
+        <div><img src="../IMG/office/policy3.png" alt="事業の課題に向き合うパートナーとなります。"></div>
         <div class="policy-text">
           <h3>事業の課題に向き合うパートナーとなります。</h3>
           <p>モットーは「自分のエゴを捨て、相手の課題に向き合い、ニーズに応える」です。<br>（書籍「１分で話せ」より引用）<br>御社ビジネスの発展に貢献し、企業資産の一部であるホームページを、課題解決を目指して共に制作していきたいと考えます。 </p>
