--- a/service/index.html
+++ b/service/index.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" href="../CSS/service.css">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Make Web</title>
+  <title>Make Web - サービス</title>
   <meta name="description" content="">
   <link rel="icon" href="../IMG/favicon.jpg">
 </head>
@@ -15,9 +15,6 @@
 <body id="service">
   <header>
     <div class="wrapper">
-      <!-- <div class="sub-header">
-        <h1>東京のweb制作事務所　|　メイクウェブ</h1>
-      </div> -->
       <div class="pc-header">
         <div class="h-logo">
           <a href="../index.html">
@@ -27,8 +24,8 @@
         <div class="h-nav">
           <ul>
             <li><a href="../index.html">HOME</a></li>
-            <li><a id="user-page" href="">事務所概要</a></li>
-            <li><a href="#">サービス</a></li>
+            <li><a ref="">事務所概要</a></li>
+            <li><a id="user-page" hhref="#">サービス</a></li>
             <li><a href="#">制作実績</a></li>
             <li><a href="#">制作の流れ</a></li>
             <li><a href="#">料金</a></li>
@@ -68,12 +65,12 @@
     <div class="service-block">
       <a href="#">
         <div class="s-icon">
-          <img src="../IMG/service2.png" alt="LPページアイコン">
+          <img src="../IMG/service2.png" alt="LPアイコン">
         </div>
         <div class="s-desc">
-          <p>LPページ制作</p>
+          <p>ランディングページ制作</p>
           <p>1枚の縦に長いWEBページのことを指します。ユーザー心理に沿った構成により、商品やサービスの訴求から成約までの導線設計を行います。</p>
-          <span>LPページ制作についてみる　＞</span>
+          <span>ランディングページ制作についてみる　＞</span>
         </div>
       </a>
     </div>
