--- a/service/lppage/index.html
+++ b/service/lppage/index.html
@@ -7,17 +7,15 @@
   <link rel="stylesheet" href="../../CSS/service.css">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Make Web</title>
+  <title>ランディングページ制作</title>
   <meta name="description" content="">
   <link rel="icon" href="../../../IMG/favicon.jpg">
 </head>
 
-<body id="service" class="service-homepage">
+<body id="service" class="service-lppage">
   <header>
     <div class="wrapper">
-      <!-- <div class="sub-header">
-        <h1>東京のweb制作事務所　|　メイクウェブ</h1>
-      </div> -->
+
       <div class="pc-header">
         <div class="h-logo">
           <a href="../index.html">
@@ -27,8 +25,8 @@
         <div class="h-nav">
           <ul>
             <li><a href="../index.html">HOME</a></li>
-            <li><a id="user-page" href="">事務所概要</a></li>
-            <li><a href="#">サービス</a></li>
+            <li><a href="">事務所概要</a></li>
+            <li><a id="user-page" href="#">サービス</a></li>
             <li><a href="#">制作実績</a></li>
             <li><a href="#">制作の流れ</a></li>
             <li><a href="#">料金</a></li>
@@ -45,44 +43,41 @@
       <li>&gt;</li>
       <li>サービス紹介</li>
       <li>&gt;</li>
-      <li>ホームページ制作</li>
+      <li>ランディングページ制作</li>
     </ul>
   </div>
-  <h1 class="page-h1">ホームページ制作</h1>
+  <h1 class="page-h1">ランディングページ制作</h1>
   <div class="h1-desc">
-    <p>事業の様々な課題に対して、WEB制作による課題解決のご提案をいたします。<br>中小企業のコーポレートサイトやECサイトなど、幅広いWEB制作を承っております。</p>
+    <p>ユーザーに商品やサービスの説明をして、お問い合わせなどの行動までを、<br>１ページで完結するように設計されたページを指します。</p>
   </div>
 
-
-
-
   <div class="service-contents">
+    <div class="lp-container">
 
-    <div class="homepage-container">
-      <div class="homepage-block">
-        <div class="case"><span>CASE１</span></div>
-        <h2>新規見込み客の開拓をしたい</h2>
+
+      <div class="block1">
+        <h2>ユーザー心理に沿ったページ構成</h2>
         <div class="block-desc">
-          <p>
-            売上が既存顧客に依存しており、新規顧客への開拓がうまくできていないと、長期的には売上の頭打ちが予測されます。<br>また、広告や仲介業者に頼り切ってしまうと、収益の増加を鈍らせてしまうことがあります。<br>WEBサイトを戦略的に制作して、ユーザーの導線を設計することで、新規見込み客としてアプローチをすることが可能です。
-          </p>
+          <p>ユーザーに閲覧して頂く為には、情報設計をしっかり作り、サイトの離脱率を下げることが重要なポイントになります</p>
+          <p>私たちが情報設計をする際は、まずヒアリングによるペルソナ設定を行います。その後、マーケティングで多用されているフレームワークである「AIDMAの法則」を基本にしたページ構成をご提案いたします。</p>
         </div>
       </div>
-      <div class="homepage-block">
-        <div class="case"><span>CASE２</span></div>
-        <h2>効率的に採用したい</h2>
-        <div class="block-desc">
-          <p>
-            大手の採用媒体や、ハローワークの求人では、限られたスペースでの訴求になる為、他社との差別化が困難な場合があります。<br>掲載はしているが反響がなくコストが拡大していくケースをよくお聞きします。<br>自社サイトによる求人では、自社のアピールを存分に行うことができる為、お問い合わせ後のユーザー心理の相違も軽減することが期待できます。
-          </p>
+
+
+      <div class="block2">
+        <h2>AIDMAの法則</h2>
+        <div class="img-wrap">
+          <ul>
+            <li><img src="../../IMG/lp/lp-img1.png" alt="注目"></li>
+            <li><img src="../../IMG/lp/lp-img2.png" alt="興味"></li>
+            <li><img src="../../IMG/lp/lp-img3.png" alt="欲求"></li>
+            <li><img src="../../IMG/lp/lp-img4.png" alt="記憶"></li>
+            <li><img src="../../IMG/lp/lp-img5.png" alt="購買"></li>
+          </ul>
         </div>
-      </div>
-      <div class="homepage-block">
-        <div class="case"><span>CASE３</span></div>
-        <h2>WEBシステムの構築で業務を効率化</h2>
         <div class="block-desc">
-          <p>WEBフォームのシステム化により、顧客データの自動管理が可能になる為、人員リソースの軽減ができます。<br>また、自動見積もりの構築や、よくある質問のページ作成により、サポート窓口の負担を軽減することが可能です。
-          </p>
+          <p>ですが、フレームワークはあくまで一つの手法であると捉えています。</p>
+          <p>最も重要な「ユーザー目線」を忘れて、制作者の自己満足にはならないように心がけて、テンプレの手法や流行りのデザインに固執せず、事業課題の解決に向けた設計をご提案いたします。</p>
         </div>
       </div>
     </div>
@@ -92,11 +87,11 @@
 
 
 
-  <div class="service-bg">
-    <h2>サービス一覧</h2>
+  <div class="footer-serviceList">
+    <p class="service-ttl">サービス一覧</p>
     <div class="service-container">
       <div class="service-block">
-        <a href="homepage">
+        <a href="#">
           <div class="s-icon">
             <img src="../../IMG/service1.png" alt="ホームページアイコン">
           </div>
@@ -110,12 +105,12 @@
       <div class="service-block">
         <a href="#">
           <div class="s-icon">
-            <img src="../../IMG/service2.png" alt="LPページアイコン">
+            <img src="../../IMG/service2.png" alt="LPアイコン">
           </div>
           <div class="s-desc">
-            <p>LPページ制作</p>
+            <p>ランディングページ制作</p>
             <p>1枚の縦に長いWEBページのことを指します。ユーザー心理に沿った構成により、商品やサービスの訴求から成約までの導線設計を行います。</p>
-            <span>LPページ制作についてみる　＞</span>
+            <span>ランディングページ制作についてみる　＞</span>
           </div>
         </a>
       </div>
@@ -145,13 +140,6 @@
       </div>
     </div>
   </div>
-
-
-
-
-
-
-
   <div class="parallax cv-bg">
     <div class="cta">
       <p>業種を問わず、幅広くサイト制作を承っております。<br>お見積もりは無料ですので、お気軽にご連絡ください。</p>
