--- a/service/advertisement/index.html
+++ b/service/advertisement/index.html
@@ -47,10 +47,48 @@
   </div>
   <h1 class="page-h1">WEB広告運用・運用代行</h1>
   <div class="h1-desc">
-    <p>事業の様々な課題に対して、WEB制作による課題解決のご提案をいたします。<br>中小企業のコーポレートサイトやECサイトなど、幅広いWEB制作を承っております。</p>
+    <p>WEBサイト、SNSへ広告の入稿作業を代行いたします。<br>その後の分析・改善案・レポーティングを一貫して行い、ビジネスの加速を行います。<br>当方では、「運用型広告」を主軸に、ご予算に応じた適切な運用代行をご提案いたします。</p>
   </div>
   <div class="service-contents">
-    <div class="homepage-container">
+    <div class="advertisement-container">
+
+      <div class="block1">
+        <h2>運用型広告の特徴</h2>
+        <div class="block1-2">
+          <h3>細やかなターゲティングが可能</h3>
+          <p>ユーザーの年齢や性別、興味関心などに対して、直接アプローチすることが可能です。<br>TVなどのマス広告と比べて、細やかなターゲティングができます。</p>
+        </div>
+        <div class="block1-2">
+          <h3>数値測定からの改善が可能</h3>
+          <p>広告の配信状況により、入札単価の調整や広告の停止を繰り返すことで、目標数値の改善を目指します。</p>
+        </div>
+        <div class="block1-2">
+          <h3>成果課金型</h3>
+          <p>運用型広告の広告枠は、その都度オークション制による評価数値の総合で決定されます。オークションに勝ち、ユーザーが入札広告にアクションをすると、初めて課金されるシステムです。</p>
+        </div>
+      </div>
+      <div class="block2">
+        <h2>具体的な入稿先</h2>
+        <div class="block2-wrap">
+          <div class="block2-1">
+            <h3>WEBサイト広告</h3>
+            <ul>
+              <li>google広告</li>
+              <li>Yahoo!プロモーション広告</li>
+            </ul>
+          </div>
+          <div class="block2-1">
+            <h3>SNS広告</h3>
+            <ul>
+              <li>instagram広告</li>
+              <li>Facebook広告</li>
+              <li>Twitter広告</li>
+              <li>LINE広告</li>
+            </ul>
+          </div>
+
+        </div>
+      </div>
 
 
 
