--- a/service/lppage/index.html
+++ b/service/lppage/index.html
@@ -58,8 +58,7 @@
       <div class="block1">
         <h2>ユーザー心理に沿ったページ構成</h2>
         <div class="block-desc">
-          <p>ユーザーに閲覧して頂く為には、情報設計をしっかり作り、サイトの離脱率を下げることが重要なポイントになります</p>
-          <p>私たちが情報設計をする際は、まずヒアリングによるペルソナ設定を行います。その後、マーケティングで多用されているフレームワークである「AIDMAの法則」を基本にしたページ構成をご提案いたします。</p>
+          <p>ユーザーに閲覧して頂く為には、情報設計をしっかり作り、サイトの離脱率を下げることが重要なポイントになります。<br>私たちが情報設計をする際は、まずヒアリングによるペルソナ設定を行います。その後、マーケティングで多用されているフレームワークである「AIDMAの法則」を基本にしたページ構成をご提案いたします。</p>
         </div>
       </div>
 
