--- a/service/maintenance/index.html
+++ b/service/maintenance/index.html
@@ -7,12 +7,12 @@
   <link rel="stylesheet" href="../../CSS/service.css">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>WEB広告運用・運用代行</title>
+  <title>サイト保守・管理</title>
   <meta name="description" content="">
   <link rel="icon" href="../../../IMG/favicon.jpg">
 </head>
 
-<body id="service" class="service-advertisement">
+<body id="service" class="service-maintenance">
   <header>
     <div class="wrapper">
       <div class="pc-header">
@@ -42,63 +42,26 @@
       <li>&gt;</li>
       <li>サービス紹介</li>
       <li>&gt;</li>
-      <li>WEB広告運用・運用代行</li>
+      <li>サイト保守・管理</li>
     </ul>
   </div>
-  <h1 class="page-h1">WEB広告運用・運用代行</h1>
+  <h1 class="page-h1">サイト保守・管理</h1>
   <div class="h1-desc">
-    <p>WEBサイト、SNSへ広告の入稿作業を代行いたします。<br>その後の分析・改善案・レポーティングを一貫して行い、ビジネスの加速を行います。<br>当方では、「運用型広告」を主軸に、ご予算に応じた適切な運用代行をご提案いたします。</p>
+    <p>納品後のサイト保守・管理をお任せ頂ければ、下記のようなご不安を解決いたします。<br>例えばこのようなお困りのお声をよくお聞きします。</p>
   </div>
   <div class="service-contents">
-    <div class="advertisement-container">
+    <div class="maintenance-container">
 
       <div class="block1">
-        <h2>運用型広告の特徴</h2>
+        <h2></h2>
         <div class="block1-2">
-          <h3>細やかなターゲティングが可能</h3>
-          <p>ユーザーの年齢や性別、興味関心などに対して、直接アプローチすることが可能です。<br>TVなどのマス広告と比べて、細やかなターゲティングができます。</p>
+          <h3>サーバーやドメインの障害対応・管理が手間なので、誰かに任せたい。</h3>
+          <h3>Webサイトのセキュリティに漠然と不安を感じている。</h3>
+          <h3>CMSなどのアップデートを定期的に行って欲しい。</h3>
         </div>
-        <div class="block1-2">
-          <h3>数値測定からの改善が可能</h3>
-          <p>広告の配信状況により、入札単価の調整や広告の停止を繰り返すことで、目標数値の改善を目指します。</p>
-        </div>
-        <div class="block1-2">
-          <h3>成果課金型</h3>
-          <p>運用型広告の広告枠は、その都度オークション制による評価数値の総合で決定されます。オークションに勝ち、ユーザーが入札広告にアクションをすると、初めて課金されるシステムです。</p>
-        </div>
+        <p>CMSのアップデートは、バックアップから試験運用、データ更新を一貫して承っておりますので、社内リソースの効率化に向けてご活用ください。<br><br>サーバー・ドメインに関する相談窓口も承っておりますので、初めてサイトを開設されて漠然とご不安を感じてる方は、無料相談より保守・管理プランのご相談頂ければと思います。</p>
       </div>
-      <div class="block2">
-        <h2>具体的な入稿先</h2>
-        <div class="block2-wrap">
-          <div class="block2-1">
-            <h3>WEBサイト広告</h3>
- 
-            <table>
-              <tr>
-                <td>・google広告</td>
-              </tr>
-              <tr>
-                <td>・Yahoo!プロモーション広告</td>
-              </tr>
-            </table>
-          </div>
-          <div class="block2-2">
-            <h3>SNS広告</h3>
-
-            <table>
-              <tr>
-                <td>・instagram広告</td>
-                <td>・Facebook広告</td>
-              </tr>
-              <tr>
-                <td>・Twitter広告</td>
-                <td>・LINE広告</td>
-              </tr>
-            </table>
-          </div>
-
-        </div>
-      </div>
+      
 
     </div>
 
