料金ページ作成

--- a/price/index.html
+++ b/price/index.html
@@ -50,33 +50,66 @@
 
   <div class="price-container">
 
-
-
-
-
-
-
-
-    <div class="class_select">
+    <div class="select_btn">
       <ul>
-        <li><a href="#web">WEB制作</a></li>
-        <li><a href="#advertisement">運用・保守</a></li>
+        <li><a href="#web"><span>WEB制作</span></a></li>
+        <li><a href="#advertisement"><span>運用・保守</span></a></li>
       </ul>
     </div>
 
-    <br><br><br><br><br><br>
+    <div id="web" class="web-wrap">
+      <div class="hp-block">
+        <h2>ホームページ制作</h2>
+        <div class="hp-wrap">
+          <div><img src="../IMG/price/hp1.svg" alt="ホームページ制作費用"></div>
+          <div>
+            <span>CASE1</span>
+            <p>小規模な企業サイト<span>（静的サイト ５P）</span></p>
+            <p>¥ 350,000_<span>（税別）</span></p>
+            <div>
+              <ul>
+                <li>オリジナルデザイン</li>
+                <li>レスポンシブ対応</li>
+                <li>原稿・ワイヤーフレーム作成</li>
+                <li>各ブラウザの最新対応</li>
+              </ul>
+            </div>
+          </div>
+        </div>
+  
+      </div>
 
-    <div id="web">テキストテキストテキスト</div>
-    <br><br><br><br><br><br>
-
-    <div id="advertisement">テキストテキストテキスト</div>
 
 
+      <!-- <div class="lp-block">
+        <h2>ランディングページ制作</h2>
+
+      </div> -->
+    </div>
+
+<!-- 
 
 
 
 
-    
+    <div id="advertisement" class="advertisement-wrap">
+      <div class="operation-block">
+        <h2>サイト運用・保守</h2>
+
+      </div>
+      <div class="advertisement-block">
+        <h2>WEB広告・運用</h2>
+
+      </div>
+
+    </div> -->
+
+
+
+
+
+
+
   </div>
 
   <div class="parallax cv-bg">
