料金ページ追加

--- a/price/index.html
+++ b/price/index.html
@@ -61,12 +61,12 @@
       <div class="hp-block">
         <h2>ホームページ制作</h2>
         <div class="hp-wrap">
-          <div><img src="../IMG/price/hp1.svg" alt="ホームページ制作費用"></div>
-          <div>
-            <span>CASE1</span>
-            <p>小規模な企業サイト<span>（静的サイト ５P）</span></p>
-            <p>¥ 350,000_<span>（税別）</span></p>
-            <div>
+          <div class="priceWrap-img"><img src="../IMG/price/hp1.svg" alt="ホームページ制作費用"></div>
+          <div class="priceWrap-desc">
+            <span class="p-case">CASE1</span>
+            <p class="p-p2">小規模な企業サイト<span>（静的サイト ５P）</span></p>
+            <p class="p-p3">¥ 350,000_<span>（税別）</span></p>
+            <div class="p-p4">
               <ul>
                 <li>オリジナルデザイン</li>
                 <li>レスポンシブ対応</li>
