--- a/price/index.html
+++ b/price/index.html
@@ -64,7 +64,7 @@
           <div class="priceWrap-img"><img src="../IMG/price/hp1.svg" alt="ホームページ制作費用"></div>
           <div class="priceWrap-desc">
             <span class="p-case">CASE1</span>
-            <p class="p-p2">小規模な企業サイト<span>（静的サイト ５P）</span></p>
+            <p class="p-p2">小規模な企業サイト<span>（静的サイト 5P）</span></p>
             <p class="p-p3">¥ 350,000_<span>（税別）</span></p>
             <div class="p-p4">
               <ul>
@@ -76,22 +76,82 @@
             </div>
           </div>
         </div>
-  
+        <div class="hp-wrap">
+          <div class="priceWrap-img"><img src="../IMG/price/hp2.svg" alt="ホームページ制作費用"></div>
+          <div class="priceWrap-desc">
+            <span class="p-case">CASE2</span>
+            <p class="p-p2">ワードプレスの企業サイト<span>（動的サイト 6P）</span></p>
+            <p class="p-p3">¥ 500,000_<span>（税別）</span></p>
+            <div class="p-p4">
+              <ul>
+                <li>オリジナルデザイン</li>
+                <li>レスポンシブ・各ブラウザ対応</li>
+                <li>原稿・ワイヤーフレーム作成</li>
+                <li>ブログ更新機能</li>
+                <li>納品後の運用フォロー</li>
+              </ul>
+            </div>
+          </div>
+        </div>
       </div>
 
-
-
-      <!-- <div class="lp-block">
+      <div class="hp-block">
         <h2>ランディングページ制作</h2>
-
-      </div> -->
+        <div class="hp-wrap">
+          <div class="priceWrap-img"><img src="../IMG/price/lp.png" alt="ランディングページ制作費用"></div>
+          <div class="priceWrap-desc">
+            <span class="p-case">CASE3</span>
+            <p class="p-p2">ランディングページ</p>
+            <p class="p-p3">¥ 200,000_<span>（税別）</span></p>
+            <div class="p-p4">
+              <ul>
+                <li>オリジナルデザイン</li>
+                <li>レスポンシブ・各ブラウザ対応</li>
+                <li>原稿・ワイヤーフレーム作成</li>
+                <li>お問合せフォーム作成</li>
+              </ul>
+            </div>
+          </div>
+        </div>
+      </div>
     </div>
 
-<!-- 
+    <div id="advertisement" class="advertisement-wrap">
+      <div class="advertisement-block">
+        <h2>サイト運用・保守</h2>
+        <div>
+          <table>
+            <tr>
+              <th>ドメイン・サーバー管理（1/M）</th>
+              <td>¥ 10,000_〜(税別)</td>
+            </tr>
+            <tr>
+              <th>サイトコンテンツ運用（1/M）</th>
+              <td>¥ 20,000_〜(税別)</td>
+            </tr>
+            <tr>
+              <th>サイト更新・相談窓口（適宜）</th>
+              <td>¥ 10,000_〜(税別)</td>
+            </tr>
+          </table>
+        </div>
+      </div>
+
+      <div class="advertisement-block">
+        <h2>Web広告・運用</h2>
+        <div>
+          <table>
+            <tr>
+              <th>運用型広告代理</th>
+              <td>¥ 30,000_〜(税別)</td>
+            </tr>
+          </table>
+        </div>
+      </div>
+    </div>
 
 
-
-
+    <!-- 
     <div id="advertisement" class="advertisement-wrap">
       <div class="operation-block">
         <h2>サイト運用・保守</h2>
