--- a/privacy/index.html
+++ b/privacy/index.html
@@ -4,15 +4,15 @@
 <head>
   <meta charset="UTF-8">
   <link rel="stylesheet" href="../CSS/common.css">
-  <link rel="stylesheet" href="../CSS/blog.css">
+  <link rel="stylesheet" href="../CSS/privacy.css">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Make Web - ブログ一覧</title>
+  <title>Make Web - プライバシーポリシー</title>
   <meta name="description" content="">
   <link rel="icon" href="../IMG/favicon.jpg">
 </head>
 
-<body id="blog-archive">
+<body id="privacy">
   <header>
     <div class="wrapper">
       <div class="pc-header">
@@ -40,58 +40,12 @@
     <ul>
       <li>HOME</li>
       <li>&gt;</li>
-      <li>ブログ一覧</li>
+      <li>プライバシーポリシー</li>
     </ul>
   </div>
-  <h1 class="page-h1">ブログ一覧</h1>
-  <div class="h1-desc">
-    <p>Web制作のご担当者様や企業向けに情報発信をいたします。<br>webマーケティングや、制作時に気になった事などを随時更新いたします。</p>
-  </div>
-
-
-  <div class="blog-container">
-    <div class="blog-block">
-      <a href="#">
-        <img src="../IMG/test3.jpg" alt="">
-        <span>2022.03.10</span>
-        <h2>タイトルタイトルタイトル</h2>
-      </a>
-    </div>
-    <div class="blog-block">
-      <a href="#">
-        <img src="../IMG/test3.jpg" alt="">
-        <span>2022.03.10</span>
-        <h2>タイトルタイトルタイトル</h2>
-      </a>
-    </div>
-    <div class="blog-block">
-      <a href="#">
-        <img src="../IMG/test3.jpg" alt="">
-        <span>2022.03.10</span>
-        <h2>タイトルタイトルタイトル</h2>
-      </a>
-    </div>
-    <div class="blog-block">
-      <a href="#">
-        <img src="../IMG/test3.jpg" alt="">
-        <span>2022.03.10</span>
-        <h2>タイトルタイトルタイトル</h2>
-      </a>
-    </div>
-    <div class="blog-block">
-      <a href="#">
-        <img src="../IMG/test3.jpg" alt="">
-        <span>2022.03.10</span>
-        <h2>タイトルタイトルタイトル</h2>
-      </a>
-    </div>
-    <div class="blog-block">
-      <a href="#">
-        <img src="../IMG/test3.jpg" alt="">
-        <span>2022.03.10</span>
-        <h2>タイトルタイトルタイトル</h2>
-      </a>
-    </div>
+  <h1 class="page-h1">プライバシーポリシー</h1>
+  <div class="privacy-container">
+    
   </div>
 
 
