--- a/office/index.html
+++ b/office/index.html
@@ -9,32 +9,50 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Make Web - 事業所概要</title>
   <meta name="description" content="">
-  <link rel="icon" href="../IMG/favicon.jpg">
+  <link rel="icon" href="../IMG/common/favicon.jpg">
 </head>
 
 <body id="office">
   <header>
     <div class="wrapper">
-      <!-- <div class="sub-header">
+      <div class="sub-header">
         <h1>東京のweb制作事務所　|　メイクウェブ</h1>
-      </div> -->
-      <div class="pc-header">
+      </div>
+      <div class="h-wrap">
         <div class="h-logo">
-          <a href="../index.html">
-            <img src="../IMG/1.svg" alt="ロゴ">
+          <a href="#">
+            <img src="../IMG/common/1.svg" alt="ロゴ">
           </a>
         </div>
         <div class="h-nav">
           <ul>
-            <li><a href="../index.html">HOME</a></li>
-            <li><a id="user-page" href="">事務所概要</a></li>
-            <li><a href="#">サービス</a></li>
+            <li><a href="#">HOME</a></li>
+            <li><a id="user-page" href="office/index.html">事務所概要</a></li>
+            <li><a href="service/index.html">サービス</a></li>
             <li><a href="#">制作実績</a></li>
             <li><a href="#">制作の流れ</a></li>
             <li><a href="#">料金</a></li>
             <li><a href="#">ブログ</a></li>
-            <li class="h-cv"><a class="btn-flat" href="#"><span>無料相談をする</span></a></li>
+            <li class="detail-btn"><a href="#"><span>無料相談をする</span></a></li>
+            <!-- <li class="h-cv"><a class="btn-flat" href="#"><span>無料相談をする</span></a></li> -->
           </ul>
+        </div>
+        <div class="sp-h-nav">
+          <span class="material-icons" id="open">menu</span>
+        </div>
+        <div class="overlay">
+          <span class="material-icons" id="close">close</span>
+          <nav>
+            <ul id="close2">
+              <li><a id="user-page" href="#">HOME</a></li>
+              <li><a href="office/index.html">事務所概要</a></li>
+              <li><a href="service/index.html">サービス</a></li>
+              <li><a href="#">制作実績</a></li>
+              <li><a href="#">制作の流れ</a></li>
+              <li><a href="#">料金</a></li>
+              <li><a href="#">ブログ</a></li>
+            </ul>
+          </nav>
         </div>
       </div>
     </div>
@@ -42,7 +60,7 @@
   <div class="breadCrumb block-layout">
     <ul>
       <li>HOME</li>
-      <li>&gt;</li>
+      <!-- <li>&gt;</li> -->
       <li>事業所概要</li>
     </ul>
   </div>
@@ -75,24 +93,25 @@
   </div>
 
   <div class="policy">
-    <h2 class="bl-b">制作に関するポリシー</h2>
+    <!-- <h2 class="bl-b">制作に関するポリシー</h2> -->
+    <h2>制作に関するポリシー</h2>
     <div class="policy-container">
       <div class="policy-wrap">
-        <div><img src="../IMG/office/policy1.png" alt="わかりやすいをモットーに。"></div>
+        <div class="policy-img"><img src="../IMG/office/policy1.png" alt="わかりやすいをモットーに。"></div>
         <div class="policy-text">
           <h3>わかりやすいをモットーに。</h3>
           <p>私自身、元々PCが得意な方ではなかったです。<br>その為、ご依頼をいただいた際に少しでも不安を感じた方には、ご不明な点は誠意を持ってご説明いたします。</p>
         </div>
       </div>
       <div class="policy-wrap">
-        <div><img src="../IMG/office/policy2.png" alt="サイト規模に適したご提案をいたします。"></div>
+        <div class="policy-img"><img src="../IMG/office/policy2.png" alt="サイト規模に適したご提案をいたします。"></div>
         <div class="policy-text">
           <h3>サイト規模に適したご提案をいたします。</h3>
           <p>大規模サイトや、ECサイトは他社の同業者をおすすめする場合があります。<br>最高のパフォーマンスで制作するために、目的に合った最適なご提案をします。</p>
         </div>
       </div>
       <div class="policy-wrap">
-        <div><img src="../IMG/office/policy3.png" alt="事業の課題に向き合うパートナーとなります。"></div>
+        <div class="policy-img"><img src="../IMG/office/policy3.png" alt="事業の課題に向き合うパートナーとなります。"></div>
         <div class="policy-text">
           <h3>事業の課題に向き合うパートナーとなります。</h3>
           <p>モットーは「自分のエゴを捨て、相手の課題に向き合い、ニーズに応える」です。<br>（書籍「１分で話せ」より引用）<br>御社ビジネスの発展に貢献し、企業資産の一部であるホームページを、課題解決を目指して共に制作していきたいと考えます。 </p>
@@ -101,13 +120,14 @@
     </div>
   </div>
   <div class="self">
-    <h2 class="bl-b">自己紹介</h2>
+    <!-- <h2 class="bl-b">自己紹介</h2> -->
+    <h2>自己紹介</h2>
     <div class="self-wrap">
-      <div class="self-img"><img src="../IMG/self.jpg" alt="木村知己"></div>
+      <div class="self-img"><img src="../IMG/office/self.jpg" alt="木村知己"></div>
       <div class="self-text">
         <p>木村　知己</p>
         <p>Tomoki Kimura</p>
-        <p>専門学校を卒業後、介護企業へ就職する。<br>「訪問入浴」とゆう在宅サービスに従事する中で、お客様にサービス提供をする喜びを学ぶ。<br>プレイングマネージャーとして従事する中で、webでの集客採用ツールに興味を持ち、マークアップ言語の学習を始める。<br>web制作を通して事業の発展に貢献したいと考え、現在は都内でフリーランスとしてweb制作を主軸に活動中。</p>
+        <p>専門学校を卒業後、介護企業へ就職する。<br>「訪問入浴」とゆう在宅サービスに従事する中で、お客様にサービス提供をする喜びを学ぶ。<br>プレイングマネージャーとして従事する中で、webでの集客採用に興味を持ち、マークアップ言語の学習を始める。<br>web制作を通して事業の発展に貢献したいと考え、現在はフリーランスとしてweb制作を主軸に活動中。</p>
       </div>
 
     </div>
@@ -126,7 +146,7 @@
         <div>
           <div class="f-logo">
             <a href="../index.html">
-              <img src="../IMG/1.svg" alt="ロゴ">
+              <img src="../IMG/common/1.svg" alt="ロゴ">
             </a>
           </div>
           <p class="f-p1">BtoBサイトを得意とする事業所</p>
