ワードプレス化。トップの実績、ブログ機能

--- a/flow/index.html
+++ b/flow/index.html
@@ -15,23 +15,44 @@
 <body id="flow">
   <header>
     <div class="wrapper">
-      <div class="pc-header">
+      <div class="sub-header">
+        <h1>東京のweb制作事務所　|　メイクウェブ</h1>
+      </div>
+      <div class="h-wrap">
         <div class="h-logo">
-          <a href="../index.html">
-            <img src="../IMG/1.svg" alt="ロゴ">
+          <a href="#">
+            <img src="IMG/common/1.svg" alt="ロゴ">
           </a>
         </div>
         <div class="h-nav">
           <ul>
-            <li><a href="../index.html">HOME</a></li>
-            <li><a ref="">事務所概要</a></li>
-            <li><a href="#">サービス</a></li>
+            <li><a id="user-page" href="#">HOME</a></li>
+            <li><a href="office/index.html">事務所概要</a></li>
+            <li><a href="service/index.html">サービス</a></li>
             <li><a href="#">制作実績</a></li>
-            <li><a id="user-page" href="#">制作の流れ</a></li>
+            <li><a href="#">制作の流れ</a></li>
             <li><a href="#">料金</a></li>
             <li><a href="#">ブログ</a></li>
-            <li class="h-cv"><a class="btn-flat" href="#"><span>無料相談をする</span></a></li>
+            <li class="detail-btn"><a href="#"><span>無料相談をする</span></a></li>
+            <!-- <li class="h-cv"><a class="btn-flat" href="#"><span>無料相談をする</span></a></li> -->
           </ul>
+        </div>
+        <div class="sp-h-nav">
+          <span class="material-icons" id="open">menu</span>
+        </div>
+        <div class="overlay">
+          <span class="material-icons" id="close">close</span>
+          <nav>
+            <ul id="close2">
+              <li><a id="user-page" href="#">HOME</a></li>
+              <li><a href="office/index.html">事務所概要</a></li>
+              <li><a href="service/index.html">サービス</a></li>
+              <li><a href="#">制作実績</a></li>
+              <li><a href="#">制作の流れ</a></li>
+              <li><a href="#">料金</a></li>
+              <li><a href="#">ブログ</a></li>
+            </ul>
+          </nav>
         </div>
       </div>
     </div>
@@ -39,7 +60,6 @@
   <div class="breadCrumb block-layout">
     <ul>
       <li>HOME</li>
-      <li>&gt;</li>
       <li>制作の流れ</li>
     </ul>
   </div>
