--- a/product/desc/index.html
+++ b/product/desc/index.html
@@ -15,23 +15,44 @@
 <body id="productDesc">
   <header>
     <div class="wrapper">
-      <div class="pc-header">
+      <div class="sub-header">
+        <h1>東京のweb制作事務所　|　メイクウェブ</h1>
+      </div>
+      <div class="h-wrap">
         <div class="h-logo">
-          <a href="../../index.html">
-            <img src="../../IMG/1.svg" alt="ロゴ">
+          <a href="#">
+            <img src="IMG/common/1.svg" alt="ロゴ">
           </a>
         </div>
         <div class="h-nav">
           <ul>
-            <li><a href="../../index.html">HOME</a></li>
-            <li><a href="">事務所概要</a></li>
-            <li><a href="#">サービス</a></li>
-            <li><a id="user-page" href="#">制作実績</a></li>
+            <li><a id="user-page" href="#">HOME</a></li>
+            <li><a href="office/index.html">事務所概要</a></li>
+            <li><a href="service/index.html">サービス</a></li>
+            <li><a href="#">制作実績</a></li>
             <li><a href="#">制作の流れ</a></li>
             <li><a href="#">料金</a></li>
             <li><a href="#">ブログ</a></li>
-            <li class="h-cv"><a class="btn-flat" href="#"><span>無料相談をする</span></a></li>
+            <li class="detail-btn"><a href="#"><span>無料相談をする</span></a></li>
+            <!-- <li class="h-cv"><a class="btn-flat" href="#"><span>無料相談をする</span></a></li> -->
           </ul>
+        </div>
+        <div class="sp-h-nav">
+          <span class="material-icons" id="open">menu</span>
+        </div>
+        <div class="overlay">
+          <span class="material-icons" id="close">close</span>
+          <nav>
+            <ul id="close2">
+              <li><a id="user-page" href="#">HOME</a></li>
+              <li><a href="office/index.html">事務所概要</a></li>
+              <li><a href="service/index.html">サービス</a></li>
+              <li><a href="#">制作実績</a></li>
+              <li><a href="#">制作の流れ</a></li>
+              <li><a href="#">料金</a></li>
+              <li><a href="#">ブログ</a></li>
+            </ul>
+          </nav>
         </div>
       </div>
     </div>
@@ -39,9 +60,7 @@
   <div class="breadCrumb block-layout">
     <ul>
       <li>HOME</li>
-      <li>&gt;</li>
       <li>制作実績一覧</li>
-      <li>&gt;</li>
       <li>制作実績詳細</li>
     </ul>
   </div>
@@ -59,11 +78,7 @@
          <td>〇〇〇〇〇〇〇〇株式会社</td>
        </tr>
        <tr>
-         <td>業種</td>
-         <td>〇〇業</td>
-       </tr>
-       <tr>
-         <td>URL</td>
+         <td>制作サイトURL</td>
          <td><a href="#">https://make-web-office.com/</a></td>
        </tr>
        <tr>
